# Shotdetect

./: .travis.yml  CMakeLists.txt  COPYING  README.md
scripts/: travis_build_and_test.sh  travis_install.sh
src/: bdd.cc  bdd.h  commandline.cc  conf.cc  conf.h  film.cc  film.h  graph.cc  graph.h  image.cc  image.h  main.cc  processing.cc  processing.h  shot.cc  shot.h  version.cc.in  xml.cc  xml.h
src/ui/: dialog_help.cc  dialog_shotdetect.cc  dialog_shotdetect.h  process_video_thread.h
